# OpenGL_revision

./: '  .clangd  .gdbinit  .gitignore  CMakeLists.txt  README.md  aCMakeLists.txt  b
include/: GL_HELP.hpp
include/debug_utils/: DBG_DEFS.h
include/w_math/types/: Vec2.hpp  Vec3.hpp
include/w_utils/: ansi_control.hpp  ansi_min.hpp
scripts/: BuildScript.sh
src/: New Text Document.txt  main.cpp  wEngApplication.hpp
src/commandSource/: ICommandSource.hpp  TermInputService.hpp
src/core/Engine/: AlphaEngine.cpp  AlphaEngine.hpp  Engine.cpp  Engine.hpp  IEngine.hpp
src/core/InterpolateServer/: IInterpolateServer.hpp  InterpolateServer.cpp  InterpolateServer.hpp  InterpolateTypes.hpp
src/core/Logger/: ILogger.hpp  LoggerBasic.hpp
src/core/Managers/: InputTypes.hpp  MaterialTypes.hpp  MeshTypes.hpp  RenderUniforms.hpp  VAOTypes.hpp
src/core/Managers/AssetManager/: AssetManager.cpp  AssetManager.hpp  IAssetManager.hpp
src/core/Managers/InputManager/: CoreInputManager.cpp  CoreInputManager.hpp  IInputManager.hpp
src/core/Managers/InputManager/InputAid/: Input.cpp  Input.hpp
src/core/Managers/MaterialManager/: IMaterialManager.hpp  MaterialManager.cpp  MaterialManager.hpp
src/core/Managers/MeshManager/: IMeshManager.hpp  MeshManager.cpp  MeshManager.hpp  MeshTypes.hpp
src/core/Managers/SceneManager/: ISceneManager.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/core/Managers/SceneManager/SceneCommand/: ISceneCommand.hpp
src/core/Managers/TextureManager/: BindlessTextureManager.cpp  BindlessTextureManager.hpp  ITextureManager.hpp
src/core/RenderScene/: IRenderScene.hpp  RenderScene.cpp  RenderScene.hpp
src/core/RenderServer/: IRenderServer.hpp  RenderServer.cpp  RenderServer.hpp  RenderTypes.hpp
src/core/RenderServer/WindowServer/: IWindowServer.hpp  OpenGLWindowServer.cpp  OpenGLWindowServer.hpp
src/core/RenderUtils/: DrawCommand.hpp  RenderTypes.hpp
src/core/SceneRenderer/: IRenderFrontend.hpp
src/core/WindowServer/: OpenGLWindowServer.cpp  OpenGLWindowServer.hpp  WindowServerTypes.hpp
src/nodeSystem/: Node.cpp  Node.hpp  NodeTypes.hpp  SpacialNode.cpp  SpacialNode.hpp  SpacialNodeProxy.hpp  TestingNode.cpp  TestingNode.hpp
